# LearnOpenGLOne

./: .gitignore  CMakeLists.txt
include/glad/include/glad/: glad.h
src/: glad.c  main.cpp
